# caseapi-wrapper

./: .gitignore  README.md  requirements.txt  setup.cfg
lcsscaseapi/: client.py  constants.py  lcssclient.py  types.py
src/lcssdata/: constants.py  lcssclient.py
tests/: context.py  test_client.py  test_lcssclient.py  test_types.py  test_types_casemeta.py  test_types_judge.py  test_types_judgeruling.py  test_types_uscircuitcasemeta.py  test_types_usjudge.py
