[metadata]
name = lcsscaseapi-SKAshwin
version = 0.0.2
author = Sanil Kumar Ashwin
author_email = sanil.kumar.ashwin@gmail.com
description = A package to easily download and manipulate the lcss case datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SKAshwin/caseapi-wrapper
project_urls =
    Bug Tracker = https://github.com/SKAshwin/caseapi-wrapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = lcsscaseapi
python_requires = >=3.6

[options.packages.find]
where = .